--- a/public/css/app.css
+++ b/public/css/app.css
@@ -77,6 +77,7 @@
 *,
 *::before,
 *::after {
+  text-align: left;
   box-sizing: border-box;
 }
 
@@ -108,11 +109,14 @@ hr {
 }
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
+  text-align: center;
   margin-top: 0;
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2;
 }
+
+h1 {}
 
 h1, .h1 {
   font-size: calc(1.35rem + 1.2vw);
@@ -120,6 +124,7 @@ h1, .h1 {
 @media (min-width: 1200px) {
   h1, .h1 {
     font-size: 2.25rem;
+    text-align: center;
   }
 }
 
@@ -329,6 +334,9 @@ th {
   border-color: inherit;
   border-style: solid;
   border-width: 0;
+  padding-left: 50px;
+  padding-right: 50px;
+  width: 5%;
 }
 
 label {
@@ -2922,8 +2930,8 @@ textarea.form-control-lg {
 }
 
 .btn-info {
-  --bs-btn-color: #000;
-  --bs-btn-bg: #0dcaf0;
+  --bs-btn-color: #f8fafc;
+  --bs-btn-bg: #0d6efd;
   --bs-btn-border-color: #0dcaf0;
   --bs-btn-hover-color: #000;
   --bs-btn-hover-bg: #31d2f2;
@@ -2932,7 +2940,8 @@ textarea.form-control-lg {
   --bs-btn-active-color: #000;
   --bs-btn-active-bg: #3dd5f3;
   --bs-btn-active-border-color: #25cff2;
-  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-active-shadow: inset 0 3px 5px
+  rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #000;
   --bs-btn-disabled-bg: #0dcaf0;
   --bs-btn-disabled-border-color: #0dcaf0;
@@ -9589,7 +9598,10 @@ textarea.form-control-lg {
   }
   .my-lg-0 {
     margin-top: 0 !important;
-    margin-bottom: 0 !important;
+    margin-bottom: 50px !important;
+    padding-left: 10px;
+    padding-right: 1000px;
+    padding-top: 5px;
   }
   .my-lg-1 {
     margin-top: 0.25rem !important;
