--- a/public/css/apoint.css
+++ b/public/css/apoint.css
@@ -1,65 +1,100 @@
+/* 予約画面 */
 .apointment {
     text-align: center;
     margin-top: 120px;
 }
-
 .date{
     text-align: center;
     padding: 30px;
 }
-
+.appoint-date{
+    cursor:pointer;
+    border-radius: 5px;
+}
 .name{
     padding-right: 50px;
     text-align: center;
 }
-
+.appointment-name{
+    font-weight: bold;
+}
+.appoint-name{
+    cursor:pointer;
+    border-radius: 5px;
+}
 .email{
     padding-right: 100px;
     text-align: center;
 }
-
+.appointment-email{
+    font-weight: bold;
+}
+.appoint-email{
+    cursor:pointer;
+    border-radius: 5px;
+    font-weight: bold;
+}
 .tel{
     padding-right: 80px;
     text-align: center;
 }
-
+.appointment-tel{
+    font-weight: bold;
+}
+.appoint-tel{
+    cursor:pointer;
+    border-radius: 5px;
+    font-weight: bold;
+}
 .password{
     padding-right: 80px;
     text-align: center;
 }
-
+.appointment-password{
+    font-weight: bold;
+}
+.appoint-password{
+    cursor:pointer;
+    border-radius: 5px;
+    font-weight: bold;
+}
 .btn{
     text-align: center;
+    cursor:pointer;
 }
 
-/* 予約画面 */
+/* 予約確認画面 */
 .confirm-title{
     text-align: center;
     margin-top: 80px;
     padding-bottom: 80px;
+    
 }
 
 .confirm-name{
     text-align: center;
     padding-bottom: 15px;
+    letter-spacing: 0.1em;
 }
 
 .confirm-email{
     text-align: center;
     padding-left: 28px;
     padding-bottom: 15px;
+    letter-spacing: 0.1em;
 }
 
 .confirm-tel{
     text-align: center;
     padding-left: 30px;
     padding-bottom: 15px;
+    letter-spacing: 0.1em;
 }
 
 .confirm-password{
     text-align: center;
     padding-left: 35px;
-    
+    letter-spacing: 0.1em;
 }
 .confirm-btn{
     text-align: center;
@@ -74,4 +109,72 @@ h3{
 .complete-back{
     text-align: center;
     margin-top: 200px;
+}
+
+/* 詳細画面 */
+.main{
+    width: 100%;
+}
+.edit_title{
+    text-align: center;
+    margin-top: 50px;
+    padding-bottom: 10px; 
+    text-shadow:1px 1px 0 #fff, 2px 2px 0 #000;
+}
+.edit_picture{
+
+    width: 100%;
+    padding-bottom: 100px;
+    padding: 100px;
+    border-radius: 30%;   
+}
+.edit-name{
+    padding-left: 350px;
+    letter-spacing: 0.1em;
+    margin-bottom: 10px;
+}
+.edit-time{
+    padding-left: 350px;
+    margin-bottom: 10px;
+    letter-spacing: 0.1em;
+
+}
+.edit-holiday{
+    padding-left: 350px;
+    margin-bottom: 10px;
+    letter-spacing: 0.1em;
+
+}
+.edit-price{
+    padding-left: 350px;
+    margin-bottom: 10px;
+    letter-spacing: 0.1em;
+
+}
+.edit-address{
+    padding-left: 350px;
+    margin-bottom: 10px;
+    letter-spacing: 0.1em;
+
+}
+.edit-tel{
+    padding-left: 350px;
+    margin-bottom: 10px;
+    letter-spacing: 0.1em;
+
+}
+.edit-seat{
+    padding-left: 350px;
+    margin-bottom: 10px;
+    letter-spacing: 0.1em;
+}
+.edit-crew{
+    padding-left: 350px;
+    margin-bottom: 10px;
+    letter-spacing: 0.1em;
+}
+.edit-parking{
+    padding-left: 350px;
+    margin-bottom: 100px;
+    letter-spacing: 0.1em;
 }
