--- a/public/css/apoint.css
+++ b/public/css/apoint.css
@@ -2,6 +2,7 @@
 .apointment {
     text-align: center;
     margin-top: 120px;
+    letter-spacing: 0.1em;
 }
 .date{
     text-align: center;
@@ -21,6 +22,7 @@
 .appoint-name{
     cursor:pointer;
     border-radius: 5px;
+    font-weight: bold;
 }
 .email{
     padding-right: 100px;
@@ -46,18 +48,6 @@
     border-radius: 5px;
     font-weight: bold;
 }
-.password{
-    padding-right: 80px;
-    text-align: center;
-}
-.appointment-password{
-    font-weight: bold;
-}
-.appoint-password{
-    cursor:pointer;
-    border-radius: 5px;
-    font-weight: bold;
-}
 .btn{
     text-align: center;
     cursor:pointer;
@@ -68,34 +58,40 @@
     text-align: center;
     margin-top: 80px;
     padding-bottom: 80px;
-    
+    letter-spacing: 0.1em;
+}
+
+.confirm-date{
+    text-align: center;
+    padding-bottom: 15px;
+    letter-spacing: 0.1em;
+    font-weight: bold;
 }
 
 .confirm-name{
     text-align: center;
     padding-bottom: 15px;
+    padding-right: 40px;
     letter-spacing: 0.1em;
+    font-weight: bold;
 }
 
 .confirm-email{
     text-align: center;
-    padding-left: 28px;
+    padding-right: 60px;
     padding-bottom: 15px;
     letter-spacing: 0.1em;
+    font-weight: bold;
 }
 
 .confirm-tel{
     text-align: center;
-    padding-left: 30px;
+    padding-right: 5px;
     padding-bottom: 15px;
     letter-spacing: 0.1em;
+    font-weight: bold;
 }
 
-.confirm-password{
-    text-align: center;
-    padding-left: 35px;
-    letter-spacing: 0.1em;
-}
 .confirm-btn{
     text-align: center;
 }
